welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: ')' expected but 'if' found.
if (!estFaceMur)
^