welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
while (!estFaceMur() && getDirection()==Direction.Nord
if (!estFaceMur)
{
	avance();
}
else 
	{
	gauche();
	avance();
	droite();
	}
			    }
